Production-ready setup: Vercel deployment, optimization, error handling, and deployment automation

--- a/package.json
+++ b/package.json
@@ -3,16 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^16.18.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/react-router-dom": "^5.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "web-vitals": "^2.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -42,8 +32,14 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "latest",
     "@storybook/react": "latest",
+    "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
+    "@types/node": "^16.18.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,14 +51,19 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "pdf-parse": "1.1.1",
     "pdf-poppler": "^0.2.1",
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.54",
+    "react": "^18.2.0",
     "react-day-picker": "9.8.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.7.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "latest",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
@@ -70,15 +71,23 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
+    "typescript": "^4.9.0",
     "vaul": "^0.9.6",
+    "web-vitals": "^2.1.0",
     "zod": "^3.24.1"
   },
   "scripts": {
-    "build": "next build",
     "dev": "next dev -p 4000",
-    "dev:https": "next dev -p 4001 --experimental-https",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
-    "start": "next start"
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next out",
+    "analyze": "ANALYZE=true npm run build",
+    "vercel-build": "npm run build",
+    "prebuild": "node scripts/build-optimize.js",
+    "optimize": "node scripts/build-optimize.js"
   },
   "eslintConfig": {
     "extends": [
@@ -99,11 +108,11 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
     "@types/node": "^22",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
